Fix style spacing of contact page for section studio and section questions

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -644,6 +644,13 @@ body {
 
 /* SECTION STUDIO */
 
+.sec-studio {
+    text-align: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
+    padding-top: 1rem;
+}
+
 .sec-studio__container {
     background-color: #f7f4ed;
     display: flex;
@@ -708,6 +715,9 @@ body {
 
 .sec-questions {
     padding-top: 0;
+    text-align: center;
+    margin-left: 1rem;
+    margin-right: 1rem;
 }
 
 .sec-questions__container {
